Project

General

Profile

Actions

Bug #10358

closed

ceph osd erasure-code-profile set myprofile k=1 should fail

Added by Loïc Dachary over 9 years ago. Updated almost 9 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
OSD
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

it is invalid and will have undefined side effects. Steps to reproduce:

  • ceph osd erasure-code-profile set myprofile k=1 m=1
  • ceph osd pool create erasurepool 1 1 erasure myprofile
  • ceph pg dump
    1.0    0    0    0    0    0    0    0    0    creating    0.000000    0'0    0:0    []    -1    []    -1    0'0    2014-12-17 22:02:39.212544    0'0    2014-12-17 22:02:39.212544
    
Actions #1

Updated by Loïc Dachary almost 9 years ago

  • Status changed from 12 to In Progress
  • Regression set to No
Actions #2

Updated by Loïc Dachary almost 9 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Loïc Dachary almost 9 years ago

  • Subject changed from ceph osd erasure-code-profile set myprofile k=1 m=1 should fail to ceph osd erasure-code-profile set myprofile k=1 should fail
Actions #4

Updated by Loïc Dachary almost 9 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF